<resources>
    <string name="app_name">tes2</string>

<!--    profile-->
    <string name="let_s_start">Let\'s Start</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout">Logout</string>
    <string name="sos_button">SOS Button</string>
    <string name="emergency_sos">Emergency SOS</string>

<!--    Home-->
    <string name="welcome">ENJOY THE RIDE</string>
    <string name="route_mate">Route Mate</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_theme1">Your journey, simplified.</string>
    <string name="welcome_theme2">Route Mate is the smartest way to navigate your city\'s bus network. Never miss a bus again.</string>
    <string name="get_started_for_free">Get Started for Free</string>
    <string name="route_search">Smart Route Search</string>
    <string name="searchDestination">Find the best bus route to your destination in seconds.</string>
    <string name="real_time_tracking">Real-time Tracking</string>
    <string name="map">Track your bus live on the map and know its exact arrival time.</string>
    <string name="instant_alerts">Instant Alerts</string>
    <string name="notifies_message">Get notified about delays, schedule changes, and traffic updates.</string>
    <string name="digital_payments">Digital Payments</string>
    <string name="paayment_theme">Buy tickets and passes easily and securely within the app.</string>
    <string name="all_your_travel_needs_in_one_place">All your travel needs in one place</string>
    <string name="HomrPara">From finding the quickest route to buying your ticket, Route Mate has you covered every step of the way. Travel smarter, not harder.</string>
    <string name="create_an_account">Create an Account</string>
    <string name="_2025_route_mate_all_rights_reserved">© 2025 Route Mate. All rights reserved.</string>
    <string name="routemate">RouteMate</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="alerts">Alerts</string>
    <string name="packages">Packages</string>
    <string name="sos">SOS</string>
    <string name="signUp">Sign Up</string>
    <string name="account_theme">Enter your information to create an account</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="my_profile">My Profile</string>
    <string name="layathma_perra_example_com">layathma.perra@example.com</string>
    <string name="layathma_perera">Layathma Perera</string>
    <string name="full_name">Full Name</string>
    <string name="layathmaPerera">Layathma Perera</string>
    <string name="email">Email</string>
    <string name="perera_example_com">perera@example.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="_94_77324567">+94 77324567</string>
    <string name="save_changesProfile">Save Changes</string>
    <string name="back_to_home">Back to Home</string>
    <string name="theme">Theme</string>
    <string name="light_theme_icon">Light theme icon</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_theme_icon">Dark theme icon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logoutrofile">Logout</string>
    <string name="routematePayment">RouteMate</string>
    <string name="settingsPayment">Settings</string>
    <string name="scan_to_pay">Scan to Pay</string>
    <string name="use_your_mobile_payment_app_to_scan_the_code_below">Use your mobile payment app to scan the code below.</string>
    <string name="qr_code_for_payment">QR Code for payment</string>
    <string name="you_are_paying">You are paying</string>
    <string name="rs_1500">Rs.1500</string>
    <string name="for_a_monthly_pass">for a Monthly Pass</string>
    <string name="i_have_paid">I Have Paid</string>
    <string name="homePayment">Home</string>
    <string name="profilePayment">Profile</string>
    <string name="alertsPayment">Alerts</string>
    <string name="packagesPayment">Packages</string>
    <string name="sosPayment">SOS</string>
    <string name="routematePackage">RouteMate</string>
    <string name="settingsPackage">Settings</string>
    <string name="travel_packages">Travel Packages</string>
    <string name="choose_the_best_plan_for_your_travel_needs">Choose the best plan for your travel needs.</string>
    <string name="single_ticket">Single Ticket</string>
    <string name="rs_100">Rs.100</string>
    <string name="one_time">One-time</string>
    <string name="single_trip_on_any_route">• Single trip on any route</string>
    <string name="valid_for_2_hours">• Valid for 2 hours</string>
    <string name="purchase_plan">Purchase Plan</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="day_pass">Day Pass</string>
    <string name="rs_300">Rs.300</string>
    <string name="per_day">per day</string>
    <string name="find_your_bus_route">Find Your Bus Route</string>
    <string name="current_location">Current Location</string>
    <string name="destination">Destination</string>
    <string name="search">Search</string>
    <string name="nearby_buses">Nearby Buses</string>
    <string name="find_buses_operating_near_you_right_now">Find buses operating near you right now.</string>
    <string name="editInfo">View and edit your personal information.</string>
    <string name="notifications">Notifications</string>
    <string name="check_alerts_for_delays_and_route_changes">Check alerts for delays and route changes.</string>
    <string name="send_an_emergency_alert_to_authorities">Send an emergency alert to authorities.</string>
    <string name="tracking_bus_number">Tracking Bus Number 22A</string>
    <string name="bus_number__empty">Bus number cannot be empty</string>
    <string name="eta_10_35_am">ETA: 10:35 AM</string>
    <string name="next_stop">Next Stop</string>
    <string name="press_the_button_to_send_an_alert_to_emergency_contacts_and_local_authorities_with_your_location">Press the button to send an alert to emergency contacts and local authorities with your location.</string>

    <string name="_10_28_am">10:28 AM</string>
    <string name="biyagama">Biyagama</string>
    <string name="_10_20_am">10:20 AM</string>
    <string name="weliweriya">Weliweriya</string>
    <string name="_10_35_am">10:35 AM</string>
    <string name="_10_12_am">10:12 AM</string>
    <string name="kaduwela">Kaduwela</string>

    <string name="_10_05_am">10:05 AM</string>
    <string name="malabe">Malabe</string>
    <string name="delgoda">Delgoda</string>
    <string name="available_bus_routes">Available Bus Routes</string>
    <string name="route_45b">Route 45B</string>
    <string name="colombo_gampaha">Colombo → Gampaha</string>
    <string name="on_time">On Time</string>
    <string name="eta_15_min">ETA: 15 min</string>
    <string name="_12_stops">12 stops</string>
    <string name="track_bus">Track Bus</string>
    <string name="route_101a">Route 101A</string>
    <string name="gampaha_kaduwela">Gampaha → Kaduwela</string>
    <string name="delayed">Delayed</string>
    <string name="eta_25_min">ETA: 25 min</string>
    <string name="_8_stops">8 stops</string>
    <string name="route_7c">Route 7C</string>
    <string name="minuwangoda_nugegoda">Minuwangoda → Nugegoda</string>
    <string name="eta_5_min">ETA: 5 min</string>
    <string name="_15_stops">15 stops</string>
    <string name="route_22">Route 22</string>
    <string name="divlapitiya_malabe">Divlapitiya → Malabe</string>
    <string name="eta_30_min">ETA: 30 min</string>
    <string name="_20_stops">20 stops</string>
    <string name="route_s_5">Route S-5</string>
    <string name="katunayake_colombo">Katunayake → Colombo</string>
    <string name="crowded">Crowded</string>
    <string name="eta_12_min">ETA: 12 min</string>
    <string name="_10_stops">10 stops</string>
    <string name="route_x2">Route X2</string>
    <string name="jaela_panadura">JaEla → Panadura</string>
    <string name="eta_18_min">ETA: 18 min</string>
    <string name="_14_stops">14 stops</string>
    <string name="auto_renews">• Auto-renews</string>

    <string name="perfect_for_daily_commuters">• Perfect for daily commuters</string>
    <string name="unlimited_trips_for_a_month">• Unlimited trips for a month</string>
    <string name="per_month">per month</string>
    <string name="monthly_pass">Monthly Pass</string>
    <string name="best_for_tourists">• Best for tourists</string>
    <string name="all_routes_included">• All routes included</string>
    <string name="unlimited_trips_for_24_hours">• Unlimited trips for 24 hours</string>
    <string name="no_more_notifications">No more notifications</string>
    <string name="check_out_the_new_monthly_unlimited_travel_pass_in_the_packages_section">Check out the new Monthly Unlimited travel pass in the Packages section.</string>
    <string name="_3d_ago">3d ago</string>
    <string name="new_package_available">New Package Available</string>
    <string name="a_detour_is_in_effect_for_route_101a_around_city_hall_expect_minor_delays">A detour is in effect for route 101A around City Hall. Expect minor delays.</string>
    <string name="_1h_ago">1h ago</string>
    <string name="route_101a_detour">Route 101A Detour</string>
    <string name="bus_45b_is_running_10_minutes_late_due_to_traffic">Bus 45B is running 10 minutes late due to traffic.</string>
    <string name="_5m_ago">5m ago</string>
    <string name="route_45b_delayed">Route 45B Delayed</string>
    <string name="notification">Notifications</string>
    <string name="every_journey_nmade_effortless">EVERY JOURNEY\nMADE EFFORTLESS.</string>
    <string name="welcome_back">Welcome Back 👋</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>